2013-07-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* References.wrl: 

2013-07-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* Normal.wrl: 

2013-07-28  Holger Seelig  <holger.seelig@yahoo.de>

	* StartTime.wrl: 

2013-07-28  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl:
	* EaseInEaseOut.wrl: 

2013-07-28  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.wrl:
	* X3DScene.importedNode.wrl: 

2013-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl: 

2013-07-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* 9.jpg:
	* index.wrl:
	* floor3.htm:
	* floor3.wrl:
	* SpotLight.wrl:
	* 9.jpg:
	* floor3.htm:
	* floor3.wrl:
	* DirectionalLight.wrl: 

2013-07-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* index.wrl:
	* preview.gif:
	* mk.png:
	* kipp.png:
	* birch.png:
	* boden.png:
	* index.wrl:
	* index.htm:
	* index.wrl:
	* index.html:
	* preview.gif:
	* krkipper1.wrl:
	* mk.png:
	* krkipper2x.wrl:
	* kipp.png:
	* index.htm:
	* boden.png:
	* index.wrl:
	* birch.png:
	* index.html:
	* krkipper1.wrl:
	* krkipper2x.wrl: 

2013-07-25  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* EmptyWorld.wrl: 

2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* vrmlbanner.wrl: 

2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* DAM.wrl:
	* IBC.wrl:
	* RAM4.wrl:
	* Revit1.wrl:
	* Stadium.wrl:
	* ramcis2.wrl:
	* Bentley1.wrl:
	* CADstudio.wrl:
	* Preheat48.wrl:
	* DAM.wrl:
	* GoldenGate.wrl:
	* IBC.wrl:
	* RAM4.wrl:
	* Revit1.wrl:
	* ramcis2.wrl:
	* Stadium.wrl:
	* Bentley1.wrl:
	* CADstudio.wrl:
	* Preheat48.wrl:
	* AISC_Sculpture_J.wrl:
	* TrainingStructure.wrl:
	* GoldenGate.wrl:
	* AISC_Sculpture_J.wrl:
	* TrainingStructure.wrl: 
