@@ -1,5 +1,9 @@
 2013-07-31  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Parser.cpp: 
+
+2013-07-31  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Parser.cpp:
 	* X3DBaseNode.cpp:
 	* X3DFieldDefinition.h:
